--- a/css/index.css
+++ b/css/index.css
@@ -146,8 +146,9 @@ h6{
     margin-top: 3px;
 }
 .piezas img{
-    padding: 10px;
+    margin-top: 10px;
     width: 100%;
+    box-shadow: 5px 5px 13px 0 rgba(250,250,250,0.75);
 
 }
 .second-piezas{
@@ -159,8 +160,68 @@ h6{
     font-style: normal;
     letter-spacing: .3em;
     margin: 30px auto;
+}
+.detalles{
+    margin-top: 50px;
+}
+.circle{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #000000;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 15px;
+}
+.circle h2{
+    font-size: 1.5em;
+    padding-top: 60px;
+    color: #ffffff;
 
 }
-
+.detalles p{
+    border-top: 10px solid #000000;
+}
+.horarios{
+    margin-bottom: 15px;
+}
+.horarios h2{
+    padding: 10px;
+    border: 10px solid #000000;
+}
+.horas{
+    font-family: 'Slabo 27px', serif;
+    text-align: center;
+    float: left;
+    width: 50%;
+    margin-left: 0;
+}
+.horas p{
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 1.7em;
+    line-height: 1em;
+}
+.sub h4{
+    width: 100%;
+    background-color: #8aa891;
+    color: #ffffff;
+    font-family: 'Slabo 27px', serif;
+    padding-left: 15px;
+    letter-spacing: .5em;
+}
+.sub img{
+    width: 100%;
+    padding: 0;
+}
+.der{
+    border-left: 1px solid #000000;
+}
+.end{
+    text-align: center;
+    background-color: #b9b3a9;
+    font-family: 'Slabo 27px', serif;
+    padding: 30px;
+    color: #eae5cd;
+}
 
 
